--- a/070_Index_Mgmt/31_Metadata_source.asciidoc
+++ b/070_Index_Mgmt/31_Metadata_source.asciidoc
@@ -31,7 +31,7 @@ PUT /my_index
 }
 --------------------------------------------------
 
-在一个搜索请求里，你可以通过在请求体中指定 `_source` 参数，来达到只查找特定的字段的效果：
+在一个搜索请求里，你可以通过在请求体中指定 `_source` 参数，来达到只获取特定的字段的效果：
 
 [source,js]
 --------------------------------------------------
@@ -50,7 +50,7 @@ GET /_search
 
 为了之后的检索，除了索引一个字段的值，你 ((("stored fields")))((("fields", "stored"))) 还可以选择 `存储` 原始字段值。有Lucene使用背景的用户使用被存储字段来选择他们想要在搜索结果里面返回的字段。事实上， `_source` 字段就是一个被存储的字段。
 
-在Elasticsearch中，设置独立的文档字段被存储通常不是最优的。整个文档已经被存储为 `_source` 字段。使用 `_source` 参数提取你需要的字段总是更好的。
+在Elasticsearch中，对文档的个别字段设置存储的做法通常不是最优的。整个文档已经被存储为 `_source` 字段。使用 `_source` 参数提取你需要的字段总是更好的。
 
 ****
 
