--- a/070_Index_Mgmt/20_Custom_Analyzers.asciidoc
+++ b/070_Index_Mgmt/20_Custom_Analyzers.asciidoc
@@ -1,5 +1,5 @@
 [[custom-analyzers]]
-=== 自定义分词器
+=== 自定义分析器 
 
 虽然Elasticsearch带有一些现成的分析器，然而在分析器上Elasticsearch真正的强大之处在于，你可以通过在一个适合你的特定数据的设置之中组合字符过滤器、分词器、词汇单元过滤器来创建自定义的分析器。
 
