--- a/075_Inside_a_shard/50_Persistent_changes.asciidoc
+++ b/075_Inside_a_shard/50_Persistent_changes.asciidoc
@@ -1,37 +1,37 @@
 [[translog]]
 === 持久化变更
 
-如果没有用 `fsync` 把数据从文件系统缓存冲刷（flush）到硬盘，我们不能保证数据((("persistent changes, making")))((("changes, persisting")))在断电甚至是程序正常退出之后依然存在。为了保证 Elasticsearch 的可靠性，需要保证数据变化被持久化到磁盘。
+如果没有用 `fsync` 把数据从文件系统缓存刷（flush）到硬盘，我们不能保证数据((("persistent changes, making")))((("changes, persisting")))在断电甚至是程序正常退出之后依然存在。为了保证 Elasticsearch 的可靠性，需要确保数据变化被持久化到磁盘。
 
 在 <<dynamic-indices>>，我们说一次完整的提交会将段刷到磁盘，并写入一个包含所有段列表的提交点。((("commit point")))Elasticsearch 在启动或重新打开一个索引的过程中使用这个提交点来判断哪些段隶属于当前分片。
 
 即使通过每秒刷新（refresh）实现了近实时搜索，我们仍然需要经常进行完整提交来确保能从失败中恢复。但在两次提交之间发生变化的文档怎么办？我们也不希望丢失掉这些数据。
 
-Elasticsearch 增加了一个 _translog_ ，或者叫 transaction 日志，((("translog (transaction log)")))在每一次对 Elasticsearch 进行操作时均进行了日志记录。通过 translog ，整个流程看起来是下面这样：
+Elasticsearch 增加了一个 _translog_ ，或者叫事务日志，((("translog (transaction log)")))在每一次对 Elasticsearch 进行操作时均进行了日志记录。通过 translog ，整个流程看起来是下面这样：
 
-1. 当一个文档被索引，它被添加到了内存内存缓冲区，_并且_ 追加到了 translog ，像在 <<img-xlog-pre-refresh>> 描述的一样。
+1. 一个文档被索引之后，就会被被添加到内存缓冲区，_并且_ 追加到了 translog ，正如 <<img-xlog-pre-refresh>> 描述的一样。
 +
 [[img-xlog-pre-refresh]]
-.新的文档被添加到内存缓冲区并且被追加到了 transaction 日志
+.新的文档被添加到内存缓冲区并且被追加到了事务日志
 image::images/elas_1106.png["New documents are added to the in-memory buffer and appended to the transaction log"]
 
-2. 刷新（refresh）使分片处于 <<img-xlog-post-refresh>> 描述的状态，分片每秒被refresh一次：
+2. 刷新（refresh）使分片处于 <<img-xlog-post-refresh>> 描述的状态，分片每秒被刷新（refresh）一次：
 +
 --
    ** 这些在内存缓冲区的文档被写入到一个新的段中，且没有进行 `fsync` 操作。
-   ** 这个段被打开，使其对搜索可见。
+   ** 这个段被打开，使其可被搜索。
 
    ** 内存缓冲区被清空。
 
 [[img-xlog-post-refresh]]
-.刷新（refresh）完成后, 缓存被清空但是 transaction 日志不会
+.刷新（refresh）完成后, 缓存被清空但是事务日志不会
 image::images/elas_1107.png["After a refresh, the buffer is cleared but the transaction log is not"]
 --
 
-3. 这个进程继续工作，更多的文档被添加到内存缓冲区和追加到 transaction 日志（见 <<img-xlog-pre-flush>> ）。
+3. 这个进程继续工作，更多的文档被添加到内存缓冲区和追加到事务日志（见 <<img-xlog-pre-flush>> ）。
 +
 [[img-xlog-pre-flush]]
-. transaction 日志不断积累文档
+. 事务日志不断积累文档
 image::images/elas_1108.png["The transaction log keeps accumulating documents"]
 
 
@@ -53,7 +53,7 @@ translog 也被用来提供实时 CRUD 。当你试着通过ID查询、更新、
 首先检查 translog 任何最近的变更。这意味着它总是能够实时地获取到文档的最新版本。
 
 [[img-xlog-post-flush]]
-.在刷新（flush）之后，段被全量提交，并且 transaction 日志被清空
+.在刷新（flush）之后，段被全量提交，并且事务日志被清空
 image::images/elas_1109.png["After a flush, the segments are fully commited and the transaction log is cleared"]
 
 [[flush-api]]
