--- a/075_Inside_a_shard/60_Segment_merging.asciidoc
+++ b/075_Inside_a_shard/60_Segment_merging.asciidoc
@@ -2,15 +2,15 @@
 === 段合并
 
 由于自动刷新流程每秒会创建一个新的段 ((("segments", "merging"))) ，这样会导致短时间内的段数量暴增。而段数目太多会带来较大的麻烦。
-每一个段都会消耗文件句柄、内存和cpu运行周期。更重要的是，每一次请求都需要检查每一个段的返回结果；段越多，搜索也就越慢。
+每一个段都会消耗文件句柄、内存和cpu运行周期。更重要的是，每个搜索请求都必须轮流检查每个段；所以段越多，搜索也就越慢。
 
 Elasticsearch通过在后台进行段合并来解决这个问题。((("merging segments")))小的段被合并到大的段，然后这些大的段再被合并到更大的段。
 
-这也是被删除的旧文档从文件系统中被清除的时刻。((("deleted documents", "purging of")))被删除的文档（或被更新文档的旧版本）不会被拷贝到新的大段中。
+段合并的时候会将那些旧的已删除文档((("deleted documents", "purging of")))从文件系统中清除。((("deleted documents", "purging of")))被删除的文档（或被更新文档的旧版本）不会被拷贝到新的大段中。
 
 启动段合并不需要你做任何事。进行索引和搜索时会自动进行。这个流程像在 <<img-merge>> 中提到的一样工作：
 
-1. 当索引的时候，刷新（refresh）进程创建新的段，而且为搜索打开它们。
+1. 当索引的时候， 刷新（refresh）操作会创建新的段并将段打开以供搜索使用。
 
 2. 合并进程选择一小部分大小相似的段，并且在后台将它们合并到更大的段中。这并不会中断索引和搜索。
 
@@ -23,7 +23,7 @@ image::images/elas_1110.png["Two commited segments and one uncommited segment in
 +
 --
     ** 新的段被刷新（flush）到了磁盘。
-    ** 一个包含新的段并且不包含旧的段和更小的段的新的提交点被写入。
+    ** 一个包含新的段并且不包含旧的段和更小的段的新的提交点被写入。写入一个包含新段且排除旧的和较小的段的新提交点。
     ** 新的段被打开用来搜索。
     ** 老的段被删除。
 
