--- a/075_Inside_a_shard/60_Segment_merging.asciidoc
+++ b/075_Inside_a_shard/60_Segment_merging.asciidoc
@@ -17,9 +17,9 @@ Elasticsearch通过在后台进行段合并来解决这个问题。((("merging s
 +
 [[img-merge]]
 .两个提交了的段和一个未提交的段正在被合并到一个更大的段
-image::images/elas_1110.png["Two commited segments and one uncommited segment in the process of being merged into a bigger segment"]
+image::images/elas_1110.png["两个提交了的段和一个未提交的段正在被合并到一个更大的段"]
 
-3. <<img-post-merge>> 说明合并完成时的活动:
+3.  <<img-post-merge>> 说明合并完成时的活动:
 +
 --
     ** 新的段被刷新（flush）到了磁盘。
@@ -29,7 +29,7 @@ image::images/elas_1110.png["Two commited segments and one uncommited segment in
 
 [[img-post-merge]]
 .一旦合并结束，老的段被删除
-image::images/elas_1111.png["Once merging has finished, the old segments are deleted"]
+image::images/elas_1111.png["一旦合并结束，老的段被删除"]
 --
 
 合并大的段需要消耗大量的I/O和CPU资源，如果任其发展会影响搜索性能。Elasticsearch在默认情况下会对合并流程进行资源限制，所以搜索仍然
